feat:调用了轮播图接口

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: xmshop
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -20,6 +20,7 @@ version: 1.0.0+1
 
 environment:
   sdk: ^3.8.1
+  flutter: ">=3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -36,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.7.2
   flutter_screenutil: ^5.9.3
+  flutter_swiper_view: ^1.1.8
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +58,10 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   fonts:
-      - family: your #指定字体名称 自定义
-        fonts:
-          - asset:  assets/fonts/iconfont.ttf
+    - family: your #指定字体名称 自定义
+      fonts:
+        - asset: assets/fonts/iconfont.ttf
+  assets:
+    - assets/images/
+    - assets/images/2.0x
+    - assets/images/3.0x
