feat:调取了分类接口，渲染了页面。

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,5 +63,5 @@ flutter:
         - asset: assets/fonts/iconfont.ttf
   assets:
     - assets/images/
-    - assets/images/2.0x
-    - assets/images/3.0x
+    - assets/images/2.0x/
+    - assets/images/3.0x/
